# c-projects

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  minigrep  search
projects/explore/src/: explore.h  main.c
projects/list/src/: list.h  main.c
projects/minigrep/src/: main.c
projects/search/src/: main.c
projects/write/src/: main.c  write.h
